<resources>
    <string name="app_name">Gilvus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="Say">Say</string>
    <string name="name">Name</string>
    <string name="apply">Apply</string>
    <string name="your_name">Your name</string>
    <string name="room_title">Room title</string>
    <string name="no_phone_number_detected">No phone number detected</string>
    <string name="cant_add_user_wo_phone">Can`t add user without a phone number</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="dont_have_account">don\'t have an account?</string>
    <string name="zero_digit">0</string>
    <string name="code_sent_to">Confirmation code was sent to: %1$s</string>
    <string name="registration">Registration</string>
    <string name="already_have_account">already have an account?</string>
    <string name="server_connection_lost">Server connection lost</string>
    <string name="retry">Retry</string>
    <string name="new_room">New room</string>
    <string name="contact_not_registered">This contact is not registered in Gilvus</string>
    <string name="room_created">Room created</string>
    <string name="error_creating_room">Error creating the room</string>
    <string name="exit">Exit</string>
</resources>
